<resources>
    <string name="app_name">NotesApp</string>
    <string name="title_notes">Notes</string>
    <string name="title_password">Passwords</string>
    <string name="title_add_item">Add an Item</string>
    <string name="title_edit_item">Edit Item</string>

    <string name="title_item">Title</string>
    <string name="description_item">Description</string>

    <string name="radio_note">Note</string>
    <string name="radio_password">Password</string>
    <string name="title_type">Type of entered Item</string>
    <string name="save">Save</string>
    <string name="title_helper_text">*Required</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>

    <string name="error_title">Title cannot be empty</string>

    <string name="save_dialog_title">Save Item</string>
    <string name="save_dialog_msg">Are you sure to save the item?</string>

    <string name="update_dialog_title">Update Item</string>
    <string name="update_dialog_msg">Are you sure to update the item?</string>

    <string name="delete_dialog_title">Delete Item</string>
    <string name="delete_dialog_msg">Are you sure to delete the item?</string>

    <string name="cancel">Cancel</string>
    <string name="date_updated">Date Updated : </string>

    <string name="enter_pin">Enter Password</string>
    <string name="confirm">Confirm</string>
    <string name="pin_error">Wrong Password Entered !</string>

<!--    Preferences-->
    <string name="header_lockscreen">LockScreen</string>
    <string name="your_pin">Your Password</string>
    <string name="settings">Settings</string>
    <string name="default_pin">0000</string>

    <string name="about">About</string>
    <string name="header_about">About Developer</string>
    <string name="developer_info">This app is developed by Soham Roy (200003072), B.Tech student of
        Mechanical Engineering branch, IIT Indore for the recruitment of the
        Programming Club, Software Development Department.</string>

</resources>