<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddItemFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/title_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp"
        app:helperText="@string/title_helper_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/title_input_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/title_item"
            android:inputType="textCapWords"/>

    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        app:layout_constraintTop_toBottomOf="@+id/title_input_layout"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_type"
            style="@style/TextAppearance.MaterialComponents.Headline6"/>

        <RadioButton
            android:id="@+id/note_radio"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/radio_note"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/password_radio"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/radio_password"/>

    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/description_input_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/desc_min_height"
        android:layout_margin="@dimen/activity_horizontal_margin"
        app:layout_constraintTop_toBottomOf="@id/radio_group"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/desc_input_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description_item" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/save"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/activity_horizontal_margin"
        app:layout_constraintTop_toBottomOf="@+id/description_input_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>